--- a/ABOUT.html
+++ b/ABOUT.html
@@ -14,13 +14,13 @@ body {
 
 h1 {
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 	padding: 20px;
-	background-color: cream;
+	background-color:white;
 }
 
 section {
-    background-color:red;
+    background-color:darkblue;
     padding: 50px;
     margin-bottom: 20px;
     border: 3px solid #ddd;
@@ -53,13 +53,12 @@ iframe {
     border: none;
 }
 nav {
-    background-color:red;
-    color: green;
+    background-color:gray;
+    color:green ;
     padding: 1em;
-    text-align: center;
+    text-align: right;
 	front-size: 50px;
-	margin-right:20px;
-	width:100%px;
+	width:100%;
 }
 
 nav ul {
@@ -70,34 +69,44 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-right: 300px;
+    margin-right: 300px; 
+    text-align:right;
 	width:100%px;
 	border-radius:50px 10px 50px 10px;
 }
 
 nav a {
-    color: blue;
+    color: black;
     text-decoration: none;
 }
 
 nav a:hover {
-    color: yellow;
+    color: red;
+}
+h2{
+ color:white;
+}
+p{
+color:lime;
+}
+li{
+ color:red;
 }
 </style>
 </head>
  <nav>
-        <ul style="background-color:red;padding:15px;front-size:20px;">
-            <button  style="background-color:green;border-radius:50px 20px 50px 20px;" ><li><a href="home.html">Home</a></li></button>
-             <button  style="background-color:green;border-radius:50px 20px 50px 20px;" ><li><a href="about.html">About</a></li></button>
-            <button  style="background-color:green;border-radius:50px 20px 50px 20px;"> <li><a href="contact.html">Contact</a></li></button>
+        <ul style="background-color:darkblue;padding:15px;front-size:20px;">
+            <button  style="background-color:white;border-radius:50px 20px 50px 20px;" ><li><a href="home.html">Home</a></li></button>
+             <button  style="background-color:white;border-radius:50px 20px 50px 20px;" ><li><a href="about.html">About</a></li></button>
+            <button  style="background-color:white;border-radius:50px 20px 50px 20px;"> <li><a href="contact.html">Contact</a></li></button>
         </ul>
     </nav>
 	<body style="background-image: url(library.jpg)">
-    <h1>About Us</h1>
+    <h1><b>About Us</b></h1>
     
     <section id="mission">
-        <h2>Our Mission</h2>
-        <p>To provide affordabe quality education to all human beings. </p>
+        <h2 style="color:white;">Our Mission</h2>
+        <p style="color:lime;">To provide affordabe quality education to all human beings. </p>
     </section>
     
     <section id="vision">
