--- a/Index.html
+++ b/Index.html
@@ -14,10 +14,11 @@ body {
 }
 
 nav {
-    background-color:red;
+    background-color:darkblue;
     color: green;
     padding: 1em;
-    text-align: center;
+    margine-left:40px;
+    text-align: right;
 	front-size: 50px;
 	margin-right:20px;
 	width:100%px;
@@ -31,23 +32,23 @@ nav ul {
 
 nav li {
     display: inline-block;
-    margin-right: 300px;
-	width:100%px;
-	border-radius:50px 10px 50px 10px;
+    margin-right: 100px;
+	width:60px;
+	border-radius:50px 30px 50px 30px;
 }
 
 nav a {
-    color: blue;
+    color: black;
     text-decoration: none;
 }
 
 nav a:hover {
-    color: yellow;
+    color: red;
 }
 
 section {
     padding: 2em;
-	background-color:orange;
+	background-color:gray;
 }
 
 #home img {
@@ -62,22 +63,19 @@ h1 {
 }
 </style>
 </head>
-<body style="background-image:url(home.jpg);">
+<body style="backgroud-color:blue;">
     <nav>
-        <ul style="background-color:red;padding:15px;front-size:50px;">
-            <button style="background-color:green;border-radius:50px 20px 50px 20px;"><li><a href="home.html">Home</a></li></button>
-            <button style="background-color:green;border-radius:50px 20px 50px 20px;"><li><a href="about.html">About</a></li></button>
-            <button style="background-color:green;border-radius:50px 20px 50px 20px;"><li><a href="contact.html">Contact</a></li></button>
+        <ul style="padding:15px;front-size:50px;">
+            <button style="background-color:white;border-radius:50px 20px 50px 20px;"><li><a href="home.html">Home</a></li></button>
+            <button style="background-color:white;border-radius:50px 20px 50px 20px;"><li><a href="about.html">About</a></li></button>
+            <button style="background-color:white;border-radius:50px 20px 50px 20px;"><li><a href="contact.html">Contact</a></li></button>
         </ul>
     </nav>
     
     <section id="home">
         <h1 style="text-align:center;color:white;font-size:40px;">Welcome to Isaac Newton High School</h1>
         <p style="text-align:center;font-size:25px;"><b>We are dedicated to providing quality education and fostering  love for learning.</b></p>
-		 <marquee><video width="100%" height="500px" controls>
-            <source src="MOVIES/esomelo lyange.mp4" type="video/mp4">
-        </video></marquee>
-    <img src="view.jpg">
+		 <img src="view.jpg"width="100%"height="100%">
 	</section>
 </body>
 </html>
